# osu-micro-benchmarks

./: CHANGES  CMakeLists.txt  Makefile.in  README  configure  configure.ac
mpi/: Makefile.in
mpi/collective/: Makefile.am  Makefile.in  osu_bcast.c  osu_coll.c  osu_reduce_scatter.c
mpi/one-sided/: Makefile.am  Makefile.in  osu_1sc.c  osu_1sc.h  osu_acc_latency.c  osu_cas_latency.c  osu_fop_latency.c  osu_get_bw.c  osu_get_latency.c  osu_put_bibw.c  osu_put_bw.c  osu_put_latency.c
mpi/pt2pt/: Makefile.am  Makefile.in
openshmem/: Makefile.in  osu_coll.h  osu_common.c  osu_common.h  osu_oshm_atomics.c  osu_oshm_barrier.c  osu_oshm_broadcast.c  osu_oshm_collect.c  osu_oshm_fcollect.c  osu_oshm_get.c  osu_oshm_put.c  osu_oshm_put_mr.c  osu_oshm_reduce.c
upc/: Makefile.in  osu_coll.h  osu_upc_all_barrier.c  osu_upc_all_broadcast.c  osu_upc_all_exchange.c  osu_upc_all_gather.c  osu_upc_all_gather_all.c  osu_upc_all_reduce.c  osu_upc_all_scatter.c  osu_upc_memget.c  osu_upc_memput.c
